# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "ferry"
version = "1.0"
description = "A crawler for Yale courses and evaluation data. Integrates with CourseTable."
requires-python = ">=3.10"
dependencies = [
  "requests==2.31.0",
  "beautifulsoup4==4.11.1",
  "stackprinter==0.2.10",
  "sentry-sdk==1.14.0",
  "tqdm==4.66.2",
  "unidecode==1.3.6",
  "tika==1.25",
  "regex==2022.10.31",
  "pandas==2.2.1",
  "vadersentiment==3.3.2",
  "ujson==5.4.0",
  "textdistance==4.5.0",
  "sqlalchemy-mixins==2.0.5",
  "sqlalchemy==2.0.27",
  "uvloop==0.19.0",
  "httpx==0.26.0",
  "PyYAML==6.0.1",
  "lxml==5.0.0",
  "diskcache==5.6.3",
  "psycopg2==2.9.9",
  "edlib==1.3.9",
  "networkx==2.8.8",
  "eralchemy2==1.3.8",
  "black==24.4.2",
]

[tool.setuptools]
packages = ["ferry"]

[tool.black]
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#labels-line-length
line-length = 88
target-version = ["py312"]

[tool.pyright]
include = ["."]
exclude = ["legacy"]
# TODO: use strict
typeCheckingMode = "standard"

pythonVersion = "3.12"
pythonPlatform = "Linux"

reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUnnecessaryTypeIgnoreComment = true

# TODO
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
