# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "ferry"
version = "1.0"
description = "A crawler for Yale courses and evaluation data. Integrates with CourseTable."
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4==4.12.3",
  "sentry-sdk==2.18.0",
  "tqdm==4.66.4",
  "unidecode==1.3.6",
  "pandas==2.2.1",
  "vadersentiment==3.3.2",
  "ujson==5.10.0",
  "textdistance==4.5.0",
  "sqlalchemy-mixins==2.0.5",
  "sqlalchemy==2.0.27",
  "uvloop==0.19.0",
  "httpx==0.27.0",
  "PyYAML==6.0.1",
  "diskcache==5.6.3",
  "psycopg2==2.9.9",
  "edlib==1.3.9",
  "networkx==3.4.2",
  "eralchemy2==1.4.1",
  "black==24.4.2",
]

[tool.setuptools]
packages = ["ferry"]

[tool.black]
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#labels-line-length
line-length = 88
target-version = ["py312"]

[tool.pyright]
include = ["."]
exclude = ["legacy"]
# TODO: use strict
typeCheckingMode = "standard"

pythonVersion = "3.12"
pythonPlatform = "Linux"

reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUnnecessaryTypeIgnoreComment = true

# TODO
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
