# See: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[project]
name = "ferry"
version = "1.0"
description = "A crawler for Yale courses and evaluation data. Integrates with CourseTable."
requires-python = ">=3.12"
dependencies = [
  "beautifulsoup4==4.13.3",
  "black==24.10.0",
  "diskcache==5.6.3",
  "edlib==1.3.9.post1",
  "eralchemy2==1.4.1",
  "httpx==0.28.1",
  "lxml==5.3.1",
  "networkx==3.4.2",
  "numpy==2.2.2",
  "pandas==2.2.3",
  "psycopg2==2.9.10",
  "PyYAML==6.0.2",
  "scipy==1.15.1",
  "sentry-sdk==2.20.0",
  "sqlalchemy-mixins==2.0.5",
  "sqlalchemy==2.0.38",
  "tqdm==4.67.1",
  "ujson==5.10.0",
  "unidecode==1.3.8",
  "uvloop==0.21.0",
  "vadersentiment==3.3.2",
]

[tool.setuptools]
packages = ["ferry"]

[tool.black]
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#labels-line-length
line-length = 88
target-version = ["py312"]

[tool.pyright]
include = ["."]
exclude = ["legacy"]
# TODO: use strict
typeCheckingMode = "standard"

pythonVersion = "3.12"
pythonPlatform = "Linux"

reportImplicitOverride = true
reportImplicitStringConcatenation = true
reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportShadowedImports = true
reportUnnecessaryTypeIgnoreComment = true

# TODO
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
