[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "coursetable_nlp"
version = "0.1.0"
description = "NLP analysis on Coursetable evaluations"
authors = ["Abhijit Gupta <avgupta456@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.1"
pre-commit = "^2.6.0"
requests = "^2.24.0"
nltk = "^3.5"
gensim = "^4.3.1"
pyenchant = "^3.1.1"
pyemd = "^0.5.1"
vaderSentiment = "^3.3.2"
matplotlib = "^3.3.0"
spacy = "^2.3.2"
inflect = "^4.1.0"
pytextrank = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
